<resources>
    <string name="Temperature_Sensor_DS18B20">DS18B20 Sensor</string>
    <string name="Humidity_Temperature_Sensor_DHT22">DHT22 Probe</string>

    <string name="app_name">Sensor Hacks</string>
    <string name="open_ground_hydroponics_bundle">Nodes</string>
    <string name="rules_engine_bundle">Rules Engine</string>
    <string name="action_settings">Settings</string>
    <string name="actuators_bundle">Actuators</string>
    <string name="sensors_bundle">Sensors</string>
    <string name="nodes_bundle">Nodes</string>
    <string name="graphs_bundle">Graphs</string>

    <string name="plusActBtnDescrptn">Add Actuator</string>
    <string name="minusActBtnDescrptn">Delete Actuator</string>
    <string name="editActBtnDescrptn">Edit Actuator</string>
    <string name="Spinner_Prompt">Select a Type</string>
    <string name="switchLED">LED Control</string>
    <string name="stopLED">Disconnect</string>

    <string name="edit_text_location">Location</string>
    <string name="plusBtnDescrptn">Add Sensor</string>
    <string name="minusBtnDescrptn">Delete Sensor</string>
    <string name="editBtnDescrptn">Edit Sensor</string>
    <string name="connect_to_rdu">Establish Connection</string>
    <string name="stop_downloading">Stop Syncing</string>
    <string name="jumpToGraphs">Plot Data</string>
    <string name="downloadsensordata">Download Sensor Data</string>

    <string name="Sensor_Name">Name</string>
    <string name="Sensor_Type">Type</string>
    <string name="Sensor_Status">Status</string>
    <string name="Sensor_Value">Value</string>
    <string name="Sensor_Id">Id</string>

    <string name="Actuator_Name">Name</string>
    <string name="Actuator_Type">Type</string>
    <string name="Actuator_Status">Status</string>
    <string name="Actuator_Id">Id</string>

    <string name="Name_Act_Hint">Insert Actuator name</string>
    <string name="Type_Act_Hint">Insert Actuator type</string>
    <string name="Status_Act_On">Actuator Online</string>
    <string name="Status_Act_Off">Actuator Offline</string>
    <string name="Id_Act_Hint">Insert Actuator unique Id</string>
    <string name="Sensor_Info_Hint">Insert general sensor info</string>

    <string name="Name_Hint">Insert Sensor name</string>
    <string name="Type_Hint">Insert Sensor type</string>
    <string name="Status_On">Sensor Online</string>
    <string name="Status_Off">Sensor Offline</string>
    <string name="Value_Hint">Insert Sensor value</string>
    <string name="Id_Hint">Insert Sensor unique Id</string>

    <string name="Bar_Chart">Bar Chart</string>
    <string name="Line_Chart">Line Chart</string>

    <string name="Refresh_Drawer">Refresh</string>
    <string name="Stop_Drawer">Stop</string>
    <string name="Home">Home</string>

</resources>
