<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_sensor_fragment"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Name_Hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/Sensor_Name"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTexttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Type_Hint"
                android:inputType="text"
                android:text="@string/Sensor_Type" />

        </android.support.design.widget.TextInputLayout>

        <ToggleButton
            android:id="@+id/toggleButtonstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sensor_Status"
            android:textOff="@string/Status_Off"
            android:textOn="@string/Status_On"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Value_Hint"
                android:inputType="numberDecimal"
                android:text="@string/Sensor_Value"
                android:visibility="visible" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/unique_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Id_Hint"
                android:text="@string/Sensor_Id"
                android:visibility="visible"
                android:ems="10"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusBtnDescrptn"
            android:visibility="visible"
            android:layout_gravity="end" />


    </LinearLayout>

</layout>