<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="actuator"
            type="com.example.vanir.sensorhacks.db.ActuatorEntity" />

        <variable
            name="editActuatorViewModel"
            type="com.example.vanir.sensorhacks.viewmodel.EditActuatorViewModel" />
    </data>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_actuator_fragment"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editActuatorTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Name_Hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@{actuator.name}"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editActuatorTextType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Type_Hint"
                android:inputType="text"
                android:text="@{actuator.type}" />

        </android.support.design.widget.TextInputLayout>

        <ToggleButton
            android:id="@+id/editToggleActuatorButtonStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(safeUnbox(actuator.status))}"
            android:textOff="@string/Status_Act_Off"
            android:textOn="@string/Status_Act_On"
            android:visibility="visible" />


        <Button
            android:id="@+id/editActButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editActBtnDescrptn"
            android:visibility="visible"
            android:layout_gravity="end" />


    </LinearLayout>

</layout>