<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="sensor"
            type="com.example.vanir.sensorhacks.db.SensorEntity" />

        <variable
            name="editSensorViewModel"
            type="com.example.vanir.sensorhacks.viewmodel.EditSensorViewModel" />
    </data>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/edit_sensor_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/iner_kit_menu_padding2">

            <TextView
                android:id="@+id/sensorNameInEditScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:ems="10"
                android:hint="@string/Sensor_Name"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@{sensor.name}"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/imagebutton_text_size"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/sensorIdInEditScreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/round_remove_red_eye_black_18dp"
                android:ems="10"
                android:hint="@string/Sensor_Id"
                android:singleLine="true"
                android:text="@{String.valueOf(safeUnbox(sensor.id))}"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/imagebutton_text_size"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

        <Spinner
            android:id="@+id/editSensorTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/Spinner_Prompt"
            android:paddingBottom="@dimen/iner_kit_menu_padding2" />


        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/editSensorTexttype"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/Type_Hint"-->
        <!--android:inputType="text"-->
        <!--android:text="@{sensor.type}" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <ToggleButton
            android:id="@+id/editToggleSensorButtonStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(safeUnbox(sensor.status))}"
            android:textOff="@string/Status_Off"
            android:textOn="@string/Status_On"
            android:visibility="visible" />

        <EditText
            android:paddingTop="@dimen/iner_kit_menu_padding2"
            android:id="@+id/editSensorInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Sensor_Info_Hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/editBtnDescrptn"
            android:visibility="visible" />


    </LinearLayout>

</layout>