<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Sensors"
    tools:showIn="@layout/activity_sns">

    <ListView
        android:id="@+id/lvSensors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/edit_layout_sensor"
        android:layout_marginTop="@dimen/list_view_top_margin" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false">

        <Button
            android:id="@+id/add_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="false"
            android:text="@string/plusBtnDescrptn"
            android:textStyle="bold"
            android:textSize="@dimen/listview_name_textsize" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/edit_layout_sensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/button_layout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@color/colorGray">

        <EditText
            android:id="@+id/edit_sns_listview_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/Sensor_Name" />

        <EditText
            android:id="@+id/edit_sns_listview_type"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type"
            android:textColor="@color/colorBlack"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/Sensor_Type" />

        <EditText
            android:id="@+id/edit_sns_listview_status"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textColor="@color/colorBlack"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/Sensor_Status" />

        <EditText
            android:id="@+id/edit_sns_listview_value"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Value"
            android:textColor="@color/colorBlack"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/Sensor_Value" />

    </LinearLayout>

</RelativeLayout>