<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/margin_top_from_bar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vanir.sensorhacks.ui.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sub_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/iner_kit_menu_padding"
        android:onClick="startnds"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.vanir.sensorhacks.ui.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:src="@drawable/nodes"
            android:onClick="startnds"
            android:layout_marginRight="18dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/nodes_bundle"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sub_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/iner_kit_menu_padding"
        android:onClick="startsns"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.vanir.sensorhacks.ui.MainActivity"
        tools:showIn="@layout/activity_main">


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:onClick="startsns"
            android:src="@drawable/sensors"
            android:layout_marginRight="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/sensors_bundle"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sub_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/iner_kit_menu_padding"
        android:onClick="startact"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.vanir.sensorhacks.ui.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:onClick="startact"
            android:src="@drawable/actuators"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/actuators_bundle"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sub_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fab_margin"
        android:onClick="startgrp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.vanir.sensorhacks.ui.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageButton
            android:id="@+id/imagebutton4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:onClick="startgrp"
            android:src="@drawable/graphs"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:text="@string/graphs_bundle"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>



